--- a/packages/paneforge/package.json
+++ b/packages/paneforge/package.json
@@ -12,10 +12,10 @@
 	},
 	"scripts": {
 		"dev": "pnpm watch",
-		"build": "vite build && npm run package",
+		"build": "pnpm package",
 		"preview": "vite preview",
 		"package": "svelte-kit sync && svelte-package && publint",
-		"prepublishOnly": "npm run package",
+		"prepublishOnly": "pnpm run package",
 		"test": "npm run test:integration && npm run test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
