--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,7 +2,7 @@
 	"$schema": "https://unpkg.com/@changesets/config@2.3.1/schema.json",
 	"changelog": [
 		"@svitejs/changesets-changelog-github-compact",
-		{ "repo": "huntabyte/paneforge" }
+		{ "repo": "svecosystem/paneforge" }
 	],
 	"commit": false,
 	"fixed": [],
