--- a/packages/paneforge/.prettierrc
+++ b/packages/paneforge/.prettierrc
@@ -3,7 +3,7 @@
 	"singleQuote": false,
 	"trailingComma": "es5",
 	"printWidth": 100,
-	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
+	"plugins": ["prettier-plugin-svelte"],
 	"overrides": [
 		{
 			"files": "*.svelte",
