--- a/sites/docs/package.json
+++ b/sites/docs/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "concurrently \"pnpm:dev:content\" \"pnpm:dev:svelte\"",
 		"dev:content": "contentlayer dev",
-		"dev:svelte": "vite dev",
+		"dev:svelte": "vite dev --host",
 		"build": "contentlayer build && vite build",
 		"build:all": "pnpm -w build",
 		"build:content": "contentlayer build",
