--- a/packages/paneforge/package.json
+++ b/packages/paneforge/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "paneforge",
-	"version": "0.0.4",
+	"version": "0.0.5",
 	"author": {
 		"name": "Hunter Johnston",
 		"url": "https://github.com/huntabyte"
@@ -37,7 +37,7 @@
 		"!dist/**/*.spec.*"
 	],
 	"peerDependencies": {
-		"svelte": "^4.0.0"
+		"svelte": "^4.0.0 || ^5.0.0-next.1"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
