--- a/package.json
+++ b/package.json
@@ -24,7 +24,21 @@
 	},
 	"license": "MIT",
 	"devDependencies": {
-		"@changesets/cli": "^2.26.2",
-		"@svitejs/changesets-changelog-github-compact": "^1.1.0"
-	}
+		"@changesets/cli": "^2.27.1",
+		"@huntabyte/eslint-config": "^0.3.2",
+		"@huntabyte/eslint-plugin": "^0.1.0",
+		"@svitejs/changesets-changelog-github-compact": "^1.1.0",
+		"eslint": "^9.0.0",
+		"eslint-plugin-svelte": "^2.37.0",
+		"prettier": "^3.2.5",
+		"prettier-plugin-svelte": "^3.2.2",
+		"prettier-plugin-tailwindcss": "^0.5.13",
+		"svelte": "^5.0.0-next.200",
+		"svelte-eslint-parser": "^0.41.0"
+	},
+	"engines": {
+		"pnpm": ">=8.6.0",
+		"node": ">=18"
+	},
+	"packageManager": "pnpm@9.6.0"
 }
