--- a/sites/docs/package.json
+++ b/sites/docs/package.json
@@ -14,7 +14,6 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"test": "vitest",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
 		"sync": "svelte-kit sync"
@@ -33,40 +32,30 @@
 		"@sveltejs/kit": "^2.5.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
 		"@tailwindcss/typography": "^0.5.10",
-		"@types/eslint": "8.56.2",
 		"@types/hast": "^3.0.4",
 		"@types/mdast": "^4.0.3",
-		"@typescript-eslint/eslint-plugin": "^7.0.1",
-		"@typescript-eslint/parser": "^7.0.1",
 		"autoprefixer": "^10.4.17",
 		"clsx": "^2.1.0",
 		"concurrently": "^8.2.2",
 		"contentlayer": "^0.3.4",
-		"eslint": "^8.56.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.35.1",
-		"mdsx": "^0.0.5",
+		"mdsx": "^0.0.6",
 		"phosphor-svelte": "^1.4.2",
 		"postcss": "^8.4.35",
 		"postcss-load-config": "^5.0.3",
-		"prettier": "^3.2.5",
-		"prettier-plugin-svelte": "^3.2.1",
-		"prettier-plugin-tailwindcss": "^0.5.11",
 		"rehype-pretty-code": "^0.13.0",
 		"remark-gfm": "^4.0.0",
 		"shiki": "^1.1.3",
-		"svelte": "^4.2.11",
-		"svelte-check": "^3.6.4",
+		"svelte": "5.0.0-next.200",
+		"svelte-check": "^3.6.9",
 		"tailwind-merge": "^2.2.1",
 		"tailwind-variants": "^0.2.0",
 		"tailwindcss": "^3.4.1",
 		"tslib": "^2.6.2",
-		"typescript": "^5.3.3",
+		"typescript": "^5.5.3",
 		"unified": "^11.0.4",
 		"unist-builder": "^4.0.0",
 		"unist-util-visit": "^5.0.0",
-		"vite": "^5.1.3",
-		"vitest": "^1.3.0",
+		"vite": "^5.2.8",
 		"zod": "^3.22.4"
 	},
 	"type": "module",
