--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"svelte": "^5.0.0-next.200",
 		"svelte-eslint-parser": "^0.41.0"
 	},
+	"type": "module",
 	"engines": {
 		"pnpm": ">=8.6.0",
 		"node": ">=18"
