--- a/packages/paneforge/package.json
+++ b/packages/paneforge/package.json
@@ -37,31 +37,29 @@
 		"!dist/**/*.spec.*"
 	],
 	"peerDependencies": {
-		"svelte": "^4.0.0 || ^5.0.0-next.1"
+		"svelte": "^5.0.0-next.1"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/package": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@sveltejs/kit": "^2.5.18",
+		"@sveltejs/package": "^2.3.2",
+		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@types/node": "^20.10.6",
 		"autoprefixer": "^10.4.16",
 		"postcss": "^8.4.32",
 		"postcss-load-config": "^5.0.2",
-		"publint": "^0.1.9",
+		"publint": "^0.2.8",
 		"svelte": "5.0.0-next.200",
-		"svelte-check": "^3.6.0",
+		"svelte-check": "^3.8.4",
 		"tailwindcss": "^3.4.1",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^5.0.3",
-		"vitest": "^1.0.0"
+		"tslib": "^2.6.3",
+		"typescript": "^5.5.3",
+		"vite": "^5.3.3",
+		"vitest": "^2.0.2"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"type": "module",
 	"dependencies": {
-		"nanoid": "^5.0.4",
 		"svelte-toolbelt": "^0.3.0"
 	}
 }
