--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
 		"build:packages": "pnpm -F \"./packages/**\" --parallel build",
 		"build:content": "pnpm -F \"./sites/**\" --parallel build:content",
 		"ci:publish": "pnpm build:packages && changeset publish",
-		"lint": "pnpm -r lint",
-		"format": "pnpm -r format",
+		"lint": "eslint .",
+		"format": "prettier --write .",
 		"check": "pnpm -r check",
 		"sync": "pnpm -r sync",
 		"postinstall": "pnpm -r sync"
@@ -30,9 +30,9 @@
 		"@svitejs/changesets-changelog-github-compact": "^1.1.0",
 		"eslint": "^9.0.0",
 		"eslint-plugin-svelte": "^2.37.0",
-		"prettier": "^3.2.5",
+		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.6",
-		"prettier-plugin-tailwindcss": "^0.5.13",
+		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^5.0.0-next.200",
 		"svelte-eslint-parser": "^0.41.0"
 	},
