--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"build:packages": "pnpm -F \"./packages/**\" --parallel build",
 		"build:content": "pnpm -F \"./sites/**\" --parallel build:content",
 		"ci:publish": "pnpm build:packages && changeset publish",
-		"lint": "eslint .",
+		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
 		"check": "pnpm -r check",
 		"sync": "pnpm -r sync",
@@ -28,8 +28,8 @@
 		"@huntabyte/eslint-config": "^0.3.2",
 		"@huntabyte/eslint-plugin": "^0.1.0",
 		"@svitejs/changesets-changelog-github-compact": "^1.1.0",
-		"eslint": "^9.0.0",
-		"eslint-plugin-svelte": "^2.37.0",
+		"eslint": "^9.8.0",
+		"eslint-plugin-svelte": "^2.43.0",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.5",
