--- a/sites/docs/package.json
+++ b/sites/docs/package.json
@@ -45,6 +45,7 @@
 		"shiki": "^1.1.3",
 		"svelte": "5.0.0-next.200",
 		"svelte-check": "^3.6.9",
+		"svelte-toolbelt": "^0.3.0",
 		"tailwind-merge": "^2.2.1",
 		"tailwind-variants": "^0.2.0",
 		"tailwindcss": "^3.4.1",
