--- a/.github/workflows/preview-release.yml
+++ b/.github/workflows/preview-release.yml
@@ -6,13 +6,12 @@ on:
 
 jobs:
     preview-release:
-        if: github.repository == 'huntabyte/bits-ui' && contains(github.event.pull_request.labels.*.name, 'publish:preview')
+        if: github.repository == 'svecosystem/paneforge' && contains(github.event.pull_request.labels.*.name, 'publish:preview')
         timeout-minutes: 5
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
             - uses: pnpm/action-setup@v4
-
             - uses: actions/setup-node@v4
               with:
                   node-version: 20
