--- a/packages/paneforge/package.json
+++ b/packages/paneforge/package.json
@@ -11,17 +11,13 @@
 		"directory": "packages/paneforge"
 	},
 	"scripts": {
-		"dev": "pnpm watch",
 		"build": "pnpm package",
-		"preview": "vite preview",
+		"dev": "pnpm watch",
 		"package": "svelte-kit sync && svelte-package && publint",
-		"prepublishOnly": "pnpm run package",
 		"test": "npm run test:integration && npm run test:unit",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"test:integration": "playwright test",
+		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"test:unit": "vitest",
-		"watch": "svelte-kit sync && svelte-package --watch"
+		"watch": "svelte-package --watch"
 	},
 	"exports": {
 		".": {
