--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -5,7 +5,7 @@ on:
       - main
     paths:
       - sites/docs/**
-      - packages/formsnap/**
+      - packages/paneforge/**
 
 jobs:
   deploy-production:
