--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -19,6 +19,7 @@ jobs:
     steps:
       - name: Download build artifact
         uses: actions/download-artifact@v4
+        id: preview-build-artifact
         with:
           name: preview-build
           path: build
@@ -32,6 +33,6 @@ jobs:
           accountId: ${{ secrets.CF_ACCOUNT_ID }}
           githubToken: ${{ secrets.GITHUB_TOKEN }}
           projectName: paneforge
-          directory: ./.svelte-kit/cloudflare
+          directory: ${{ steps.preview-build-artifact.outputs.download-path }}
           workingDirectory: sites/docs
           deploymentName: Preview
