--- a/.github/workflows/build-preview.yml
+++ b/.github/workflows/build-preview.yml
@@ -32,4 +32,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: preview-build
-          path: build
+          path: sites/docs/.svelte-kit/cloudflare
