--- a/packages/paneforge/package.json
+++ b/packages/paneforge/package.json
@@ -43,18 +43,18 @@
 		"postcss": "^8.4.32",
 		"postcss-load-config": "^5.0.2",
 		"publint": "^0.2.8",
-		"svelte": "5.0.0-next.200",
+		"svelte": "^5.0.0-next.259",
 		"svelte-check": "^3.8.4",
 		"tailwindcss": "^3.4.1",
 		"tslib": "^2.6.3",
-		"typescript": "^5.5.3",
-		"vite": "^5.3.3",
+		"typescript": "^5.6.2",
+		"vite": "^5.4.7",
 		"vitest": "^2.0.2"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"type": "module",
 	"dependencies": {
-		"svelte-toolbelt": "^0.3.0"
+		"svelte-toolbelt": "^0.3.1"
 	}
 }
