--- a/sites/docs/package.json
+++ b/sites/docs/package.json
@@ -27,7 +27,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-cloudflare": "^4.1.0",
 		"@sveltejs/kit": "^2.5.0",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.1",
+		"@sveltejs/vite-plugin-svelte": "4.0.0-next.7",
 		"@tailwindcss/typography": "^0.5.10",
 		"@types/hast": "^3.0.4",
 		"@types/mdast": "^4.0.3",
@@ -42,7 +42,7 @@
 		"rehype-pretty-code": "^0.13.0",
 		"remark-gfm": "^4.0.0",
 		"shiki": "^1.1.3",
-		"svelte": "5.0.0-next.200",
+		"svelte": "^5.0.0-next.259",
 		"svelte-check": "^3.6.9",
 		"svelte-toolbelt": "^0.3.0",
 		"tailwind-merge": "^2.2.1",
