--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,22 +17,13 @@ jobs:
         steps:
             - uses: actions/checkout@v4
             - uses: pnpm/action-setup@v4
-              with:
-                  version: 8
-
             - uses: actions/setup-node@v4
               with:
-                  node-version: 18
+                  node-version: 20
                   cache: pnpm
 
             - name: Install dependencies
               run: pnpm install
-
-            - name: Build
-              run: pnpm build
-
-            - name: Sync
-              run: pnpm sync
 
             - name: Run svelte-check
               run: pnpm check
@@ -43,14 +34,9 @@ jobs:
         steps:
             - uses: actions/checkout@v4
             - uses: pnpm/action-setup@v4
-              name: Install pnpm
+            - uses: actions/setup-node@v4
               with:
-                  version: 8
-
-            - name: Install Node.JS
-              uses: actions/setup-node@v4
-              with:
-                  node-version: 18
+                  node-version: 20
                   cache: pnpm
 
             - name: Install dependencies
