--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
 		"@huntabyte/eslint-plugin": "^0.1.0",
 		"@svitejs/changesets-changelog-github-compact": "^1.1.0",
 		"eslint": "^9.8.0",
-		"eslint-plugin-svelte": "^2.43.0",
+		"eslint-plugin-svelte": "^2.44.1",
 		"prettier": "^3.3.3",
-		"prettier-plugin-svelte": "^3.2.6",
+		"prettier-plugin-svelte": "^3.2.7",
 		"prettier-plugin-tailwindcss": "^0.6.5",
-		"svelte": "^5.0.0-next.259",
-		"svelte-eslint-parser": "^0.41.0"
+		"svelte": "5.0.0-next.262",
+		"svelte-eslint-parser": "^0.41.1"
 	},
 	"type": "module",
 	"engines": {
