--- a/packages/paneforge/package.json
+++ b/packages/paneforge/package.json
@@ -37,14 +37,14 @@
 	"devDependencies": {
 		"@sveltejs/kit": "^2.5.18",
 		"@sveltejs/package": "^2.3.2",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.1",
+		"@sveltejs/vite-plugin-svelte": "4.0.0-next.7",
 		"@types/node": "^20.10.6",
 		"autoprefixer": "^10.4.16",
 		"postcss": "^8.4.32",
 		"postcss-load-config": "^5.0.2",
 		"publint": "^0.2.8",
-		"svelte": "^5.0.0-next.259",
-		"svelte-check": "^3.8.4",
+		"svelte": "5.0.0-next.262",
+		"svelte-check": "^4.0.4",
 		"tailwindcss": "^3.4.1",
 		"tslib": "^2.6.3",
 		"typescript": "^5.6.2",
@@ -55,6 +55,6 @@
 	"types": "./dist/index.d.ts",
 	"type": "module",
 	"dependencies": {
-		"svelte-toolbelt": "^0.3.1"
+		"svelte-toolbelt": "^0.4.1"
 	}
 }
