--- a/sites/docs/package.json
+++ b/sites/docs/package.json
@@ -42,13 +42,13 @@
 		"rehype-pretty-code": "^0.13.0",
 		"remark-gfm": "^4.0.0",
 		"shiki": "^1.1.3",
-		"svelte": "^5.0.0-next.259",
-		"svelte-check": "^3.6.9",
-		"svelte-toolbelt": "^0.3.0",
+		"svelte": "5.0.0-next.262",
+		"svelte-check": "^4.0.4",
+		"svelte-toolbelt": "^0.4.1",
 		"tailwind-merge": "^2.2.1",
 		"tailwind-variants": "^0.2.0",
 		"tailwindcss": "^3.4.1",
-		"tslib": "^2.6.2",
+		"tslib": "^2.7.0",
 		"typescript": "^5.5.3",
 		"unified": "^11.0.4",
 		"unist-builder": "^4.0.0",
@@ -60,7 +60,7 @@
 	"dependencies": {
 		"@melt-ui/svelte": "^0.74.0",
 		"bits-ui": "^0.21.13",
-		"mode-watcher": "^0.2.1",
+		"mode-watcher": "^0.4.1",
 		"paneforge": "workspace:^",
 		"rehype-slug": "^6.0.0",
 		"svelte-sonner": "^0.3.17",
