--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,9 +1,6 @@
 {
 	"$schema": "https://unpkg.com/@changesets/config@2.3.1/schema.json",
-	"changelog": [
-		"@svitejs/changesets-changelog-github-compact",
-		{ "repo": "svecosystem/paneforge" }
-	],
+	"changelog": "@changesets/cli/changelog",
 	"commit": false,
 	"fixed": [],
 	"linked": [],
