--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,30 +16,22 @@ jobs:
         name: Release
         runs-on: ubuntu-latest
         steps:
-            - name: Checkout Repo
-              uses: actions/checkout@v4
+            - uses: actions/checkout@v4
               with:
-                  # This makes Actions fetch all Git history so that Changesets can generate changelogs with the correct commits
                   fetch-depth: 0
-
             - uses: pnpm/action-setup@v4
+            - uses: actions/setup-node@v4
               with:
-                  version: 8
-
-            - name: Setup Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: 18
+                  node-version: 20
                   cache: pnpm
 
-            - run: pnpm install --frozen-lockfile
+            - name: Install dependencies
+              run: pnpm install
 
             - name: Create Release Pull Request or Publish to npm
               id: changesets
               uses: changesets/action@v1
               with:
-                  commit: "chore(release): version package"
-                  title: "chore(release): version package"
                   publish: pnpm ci:publish
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
