--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,6 +1,9 @@
 {
 	"$schema": "https://unpkg.com/@changesets/config@2.3.1/schema.json",
-	"changelog": "@changesets/cli/changelog",
+	"changelog": [
+		"@svitejs/changesets-changelog-github-compact",
+		{ "repo": "svecosystem/paneforge" }
+	],
 	"commit": false,
 	"fixed": [],
 	"linked": [],
