--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.7",
 		"prettier-plugin-tailwindcss": "^0.6.5",
-		"svelte": "5.0.0-next.262",
+		"svelte": "^5.0.0-next.262",
 		"svelte-eslint-parser": "^0.41.1"
 	},
 	"type": "module",
