--- a/sites/docs/package.json
+++ b/sites/docs/package.json
@@ -42,7 +42,7 @@
 		"rehype-pretty-code": "^0.13.0",
 		"remark-gfm": "^4.0.0",
 		"shiki": "^1.1.3",
-		"svelte": "5.0.0-next.262",
+		"svelte": "^5.0.0-next.262",
 		"svelte-check": "^4.0.4",
 		"svelte-toolbelt": "^0.4.1",
 		"tailwind-merge": "^2.2.1",
