--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,18 @@ on:
     push:
         branches:
             - main
+            - next
+        paths-ignore:
+            - ".changeset/**"
+            - README.md
+            - ".vscode/**"
+            - CHANGELOG.md
     pull_request:
+        paths-ignore:
+            - ".changeset/**"
+            - README.md
+            - ".vscode/**"
+            - CHANGELOG.md
 
 concurrency:
     group: ${{ github.workflow }}-${{ github.event.number || github.sha }}
@@ -13,77 +24,31 @@ concurrency:
 jobs:
     Check:
         name: Run svelte-check
-        runs-on: ubuntu-latest
+        runs-on: macos-latest
         steps:
-            - uses: actions/checkout@v3
+            - uses: actions/checkout@v4
+            - uses: pnpm/action-setup@v4
+            - uses: actions/setup-node@v4
               with:
-                  fetch-depth: 0
-
-            - uses: pnpm/action-setup@v2
-              with:
-                  version: 8
-
-            - uses: actions/setup-node@v3
-              with:
-                  node-version: 18
-
-            # PNPM Store cache setup
-            - name: Get pnpm store directory
-              id: pnpm-cache
-              run: |
-                  echo "pnpm_cache_dir=$(pnpm store path)" >> $GITHUB_OUTPUT
-            - name: Setup pnpm cache
-              uses: actions/cache@v3
-              with:
-                  path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
-                  key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-                  restore-keys: |
-                      ${{ runner.os }}-pnpm-store-
+                  node-version: 20
+                  cache: pnpm
 
             - name: Install dependencies
               run: pnpm install
-
-            - name: Build
-              run: pnpm build
-
-            - name: Sync
-              run: pnpm sync
 
             - name: Run svelte-check
               run: pnpm check
 
     Lint:
-        runs-on: ubuntu-latest
+        runs-on: macos-latest
         name: Lint
         steps:
-            - uses: actions/checkout@v3
+            - uses: actions/checkout@v4
+            - uses: pnpm/action-setup@v4
+            - uses: actions/setup-node@v4
               with:
-                  fetch-depth: 0
-
-            - name: Install Node.JS
-              uses: actions/setup-node@v3
-              with:
-                  node-version: 18
-
-            - uses: pnpm/action-setup@v2
-              name: Install pnpm
-              id: pnpm-install
-              with:
-                  version: 8
-
-            # PNPM Store cache setup
-            - name: Get pnpm store directory
-              id: pnpm-cache
-              run: |
-                  echo "pnpm_cache_dir=$(pnpm store path)" >> $GITHUB_OUTPUT
-
-            - name: Setup pnpm cache
-              uses: actions/cache@v3
-              with:
-                  path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
-                  key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-                  restore-keys: |
-                      ${{ runner.os }}-pnpm-store-
+                  node-version: 20
+                  cache: pnpm
 
             - name: Install dependencies
               run: pnpm install
