--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,7 @@ on:
     push:
         branches:
             - main
+            - next
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
@@ -13,30 +14,24 @@ jobs:
             contents: write # to create release (changesets/action)
             pull-requests: write # to create pull request (changesets/action)
         name: Release
-        runs-on: ubuntu-latest
+        runs-on: macos-latest
         steps:
-            - name: Checkout Repo
-              uses: actions/checkout@v3
+            - uses: actions/checkout@v4
               with:
-                  # This makes Actions fetch all Git history so that Changesets can generate changelogs with the correct commits
                   fetch-depth: 0
-            - uses: pnpm/action-setup@v2.2.4
+            - uses: pnpm/action-setup@v4
+            - uses: actions/setup-node@v4
               with:
-                  version: 8.6.3
-            - name: Setup Node.js
-              uses: actions/setup-node@v3
-              with:
-                  node-version: "18.x"
+                  node-version: 20
                   cache: pnpm
 
-            - run: pnpm install --frozen-lockfile
+            - name: Install dependencies
+              run: pnpm install
 
             - name: Create Release Pull Request or Publish to npm
               id: changesets
               uses: changesets/action@v1
               with:
-                  commit: "chore(release): version package"
-                  title: "chore(release): version package"
                   publish: pnpm ci:publish
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
