--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -5,7 +5,7 @@ on:
             - main
         paths:
             - docs/**
-            - packages/kit/**
+            - packages/paneforge/**
     workflow_dispatch:
 
 jobs:
