--- a/packages/paneforge/package.json
+++ b/packages/paneforge/package.json
@@ -36,7 +36,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/kit": "^2.17.2",
-		"@sveltejs/package": "^2.3.0",
+		"@sveltejs/package": "^2.3.10",
 		"@sveltejs/vite-plugin-svelte": "4.0.0",
 		"@testing-library/dom": "^10.2.0",
 		"@testing-library/jest-dom": "^6.4.6",
@@ -46,7 +46,7 @@
 		"jsdom": "^24.0.0",
 		"publint": "^0.1.9",
 		"resize-observer-polyfill": "^1.5.1",
-		"svelte": "^5.20.1",
+		"svelte": "^5.20.2",
 		"svelte-check": "^4.1.4",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
@@ -57,6 +57,7 @@
 	"types": "./dist/index.d.ts",
 	"type": "module",
 	"dependencies": {
+		"runed": "^0.23.4",
 		"svelte-toolbelt": "^0.7.1"
 	}
 }
