--- a/packages/paneforge/tsconfig.json
+++ b/packages/paneforge/tsconfig.json
@@ -11,6 +11,6 @@
 		"strict": true,
 		"module": "NodeNext",
 		"moduleResolution": "NodeNext",
-		"exactOptionalPropertyTypes": true
+		"erasableSyntaxOnly": true
 	}
 }
