--- a/package.json
+++ b/package.json
@@ -23,21 +23,22 @@
 	"packageManager": "pnpm@9.14.4",
 	"devDependencies": {
 		"@changesets/cli": "^2.27.10",
-		"@eslint/js": "^9.12.0",
+		"@eslint/js": "^9.29.0",
 		"@svitejs/changesets-changelog-github-compact": "^1.2.0",
 		"@types/node": "^22.10.1",
 		"@typescript-eslint/eslint-plugin": "^8.10.0",
 		"@typescript-eslint/scope-manager": "^8.10.0",
 		"@typescript-eslint/utils": "^8.10.0",
 		"eslint": "^9.0.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.46.1",
+		"eslint-config-prettier": "^10.1.5",
+		"eslint-plugin-svelte": "^3.9.2",
 		"globals": "^15.11.0",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.3.2",
 		"prettier-plugin-tailwindcss": "^0.6.8",
 		"svelte": "^5.34.3",
 		"svelte-eslint-parser": "^0.43.0",
+		"tseslint": "^0.0.2",
 		"typescript": "^5.6.3",
 		"typescript-eslint": "^8.10.0",
 		"wrangler": "^3.91.0"
